src/kubernetes.io/NetworkPolicy/deny-all-ingress-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-mysql
  namespace: mysql
spec:
  podSelector: {}
  policyTypes:
  - Ingress
