src/kubernetes.io/NetworkPolicy/network-policy-allow-ingress-default-3306.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-default-and-3306
  namespace: mysql
spec:
  podSelector: 
    matchLabels:
      app: mysql 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["default"]
    ports:
    - protocol: TCP
      port: 3306
