src/kubernetes.io/NetworkPolicy/network-policy-deny-ingress-default-and-3306.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-default-and-3306
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["default"]
      ports:
      - protocol: TCP
        port: 3306
